# coc

./: .gitignore  .pre-commit-config.yam  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
coc/: constants.py  main.py  settings.py  timer.py
coc/api/: __init__.py  notify.py
coc/models/: __init__.py
migrations/coc/: 0_20240730151340_init.py
tests/: test_performance.py
