[project]
name = "coc"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ylei", email = "2457738122@qq.com"},
]
dependencies = [
    "fastapi==0.111.1,",
    "tortoise-orm==0.21.5",
    "aerich==0.7.2",
    "structlog==24.4.0",
    "uvicorn==0.30.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false


[tool.pdm.dev-dependencies]
dev = [
    "httpx>=0.27.0",
    "ruff>=0.5.5",
    "pre-commit>=3.8.0",
]


[tool.aerich]
tortoise_orm = "coc.settings.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.pdm.scripts]
# 开发环境
dev.env_file.override = ".env"
dev.cmd = "uvicorn coc.main:app --host 0.0.0.0 --port 8000 --reload"
post_install = "pre-commit install"


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191", # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
# "__init__.py" = ["F401"]
